[build-system]
requires = ["setuptools>=42.1", "setuptools_scm[toml]>=7.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = ["binarytree/version.py"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-s -vv -p no:warnings"
minversion = "6.0"
testpaths = ["tests"]

[tool.setuptools_scm]
write_to = "binarytree/version.py"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true
