[metadata]
name = binarytree
author = Joohwan Oh
author_email = joohwan.oh@outlook.com
license = MIT
description = Python Library for Studying Binary Trees
keywords = tree, heap, bst, education
url = https://github.com/joowani/binarytree
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Documentation :: Sphinx
    Topic :: Education

[options]
packages = find:
install_requires = graphviz
include_package_data = True
python_requires = >=3.7

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    black>=22.1.0
    flake8>=4.0.1
    isort>=5.10.1
    mypy>=0.931
    pre-commit>=2.17.0
    pytest>=6.2.1
    pytest-cov>=2.10.1
    sphinx
    sphinx_rtd_theme
    types-setuptools
    types-dataclasses

[flake8]
max-line-length = 88
extend-ignore = E203, E741, W503
exclude = .git .idea .*_cache dist htmlcov venv
per-file-ignores = __init__.py:F401 conf.py:E402
